force-app/main/default/objects/Mangas__c/Mangas__c.object-meta.xml
<CustomObject>
    <label>Mangas</label>
    <nameField>
        <label>Mangas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mangas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>