force-app/main/default/objects/Mangas__c/fields/Episodes__c.field-meta.xml
<CustomField>
    <fullName>Episodes__c</fullName>
    <label>Episodes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>