force-app/main/default/objects/Mangas__c/fields/OwnerShip__c.field-meta.xml
<CustomField>
    <fullName>OwnerShip__c</fullName>
    <label>OwnerShip</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ainhoa</fullName>
            </value>
            <value>
                <fullName>Cloe</fullName>
            </value>
            <value>
                <fullName>Jesus</fullName>
            </value>
            <value>
                <fullName>Monica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>