force-app/main/default/objects/Mangas__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kodomo</fullName>
            </value>
            <value>
                <fullName>Shonen</fullName>
            </value>
            <value>
                <fullName>Shojo</fullName>
            </value>
            <value>
                <fullName>Seinen</fullName>
            </value>
            <value>
                <fullName>Josei</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>